# sb3vm

./: .gitignore  AGENTS.md  README.md  make_benchmarks.py  make_compat_fixtures.py  make_demo.py  pyproject.toml  setup.cfg  test.py  test.sb3
compat/: manifest.json
compat/goldens/: demo_final.json  key_backdrop_dialogue_final.json  partial_final.json  timing_final.json  timing_step_1.json  timing_step_2.json  timing_step_3.json  timing_step_4.json
compat/projects/: demo.sb3  key_backdrop_dialogue.sb3  parsed_only.sb3  partial_unsupported.sb3  timing_broadcast_wait.sb3
examples/: authoring_demo.py  authoring_demo.sb3  benchmark_broadcast_fanout.sb3  benchmark_hot_loop.sb3  demo.sb3  roundtrip_fixture.sb3  unsupported_fixture.sb3
sb3vm/: __init__.py  cli.py  log.py
sb3vm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sb3vm/codegen/: __init__.py  api.py  compiler.py  exporter.py  ir.py
sb3vm/io/: load_sb3.py  save_sb3.py
sb3vm/model/: project.py
sb3vm/parse/: ast_nodes.py  extract_scripts.py  pretty.py
sb3vm/render/: __init__.py  assets.py  compositor.py  display.py  effects.py  pen.py  pygame_display.py  speech.py
sb3vm/vm/: benchmark.py  compat.py  compiler.py  errors.py  eval_expr.py  extensions.py  input_provider.py  ir.py  runtime.py  scratch_values.py  state.py
tests/: __init__.py  test_codegen.py  test_compat.py  test_helpers.py  test_logging.py  test_performance.py  test_render.py  test_roundtrip.py  test_scratch_values.py  test_validation.py  test_vm.py
tests/fixtures/: roundtrip_rich_project.json  (+1 more)
(+1 files in other folders)
