[metadata]
name = sb3vm
version = attr: sb3vm.__version__
description = Headless Scratch sb3 VM MVP
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
zip_safe = False

[options.packages.find]
include = sb3vm*
exclude = tests*

[options.extras_require]
render =
    Pillow>=10.0.0
    cairosvg>=2.7.0
    numpy>=1.24.0

[options.entry_points]
console_scripts =
    sb3vm = sb3vm.cli:main

[tool:pytest]
pythonpath = .
addopts = -q
